# cocoa-1

./: README.md
BookShelf/BookShelf/: AppDelegate.h  AppDelegate.m  BookShelfViewController.h  BookShelfViewController.m  BookShelfViewController.xib  Bookshelf.xib  BookshelfController.h  BookshelfController.m  PragBook.h  PragBook.m  main.m
BookShelf/BookShelf.xcodeproj/: project.pbxproj
Currency Converter/: Converter.h  Converter.m  ConverterController.h  ConverterController.m
Sequences/: README
TrackMix/: Track.h  Track.m
Xfast/: README
Xfast6/: HOWTO  README  TODO
alder-adapter/alder-adapter/cmake/: AUTHORS  CMakeLists.txt  INSTALL  NEWS  README  TODO
alder-adapter/alder-adapter/cmake/lib/: CMakeLists.txt
alder-adapter/alder-adapter/cmake/lib/fastq/: CMakeLists.txt
alder-adapter/alder-adapter/cmake/lib/file/: CMakeLists.txt
alder-adapter/alder-adapter/cmake/lib/logger/: CMakeLists.txt
alder-adapter/alder-adapter/cmake/lib/nglogc/: CMakeLists.txt
alder-adapter/alder-adapter/cmake/lib/vector/: CMakeLists.txt
alder-adapter/alder-adapter/cmake/sh/: src2xcode  xcode2src
alder-adapter/alder-adapter/cmake/src/: CMakeLists.txt
alder-align/: README
alder-align/alder-align/cmake/: AUTHORS  CMakeLists.txt  INSTALL  NEWS  README  THANKS  TODO
alder-align/alder-align/cmake/lib/: CMakeLists.txt
alder-align/alder-align/cmake/sh/: dist  src2xcode  xcode2src
alder-align/alder-align/cmake/src/: CMakeLists.txt
alder-bitarray/: README
alder-bzip2/: README
alder-cortex/: README
alder-crc/: README
alder-de/: README  install-package.R  setup.sh
alder-denovo/: README
alder-fastq/alder-fastq/fastq/: CMakeLists.txt  alder_fastq.c  alder_fastq.h  alder_fastq_chunk.c  alder_fastq_chunk.h  alder_fastq_concat.c  alder_fastq_concat.h  alder_fastq_count_kmer.c  alder_fastq_count_kmer.h  alder_fastq_count_kmer.rl  alder_fastq_estimate_nkmer.c  alder_fastq_estimate_nkmer.h  alder_fastq_estimate_nkmer.rl  alder_fastq_kseq.c  alder_fastq_kseq.h  alder_fastq_kseq_summary.c  alder_fastq_kseq_summary.h  alder_fastq_length.c  alder_fastq_length.h  alder_fastq_numbase.c  alder_fastq_numbase.h  alder_fastq_pair.c  alder_fastq_pair.h  alder_fastq_ragel.c  alder_fastq_ragel.h  alder_fastq_ragel.rl  alder_fastq_ragel_summary.c  alder_fastq_sequenceiterator.c  alder_fastq_sequenceiterator.h  alder_fastq_streamer.c  alder_fastq_streamer.h  alder_fastq_write.c  alder_fastq_write.h
alder-file/: README
alder-file/alder-file/file/: CMakeLists.txt  alder_file.c  alder_file.h  alder_file_availablediskspace.c  alder_file_availablediskspace.h  alder_file_availablememory.c  alder_file_availablememory.h  alder_file_availableopenfiles.c  alder_file_availableopenfiles.h  alder_file_creatable.c  alder_file_creatable.h  alder_file_exist.c  alder_file_exist.h  alder_file_firstline.c  alder_file_firstline.h  alder_file_format.c  alder_file_format.h  alder_file_getcwd.c  alder_file_getcwd.h  alder_file_info.c  alder_file_info.h  alder_file_io.c  alder_file_io.h  alder_file_isbinary.c  alder_file_isbinary.h  alder_file_isbzip2.c  alder_file_isbzip2.h  alder_file_isfasta.c  alder_file_isfasta.h  alder_file_isfastq.c  alder_file_isfastq.h  alder_file_isfile.c  alder_file_isfile.h  alder_file_isgzip.c  alder_file_isgzip.h  alder_file_islz4.c  alder_file_islz4.h  alder_file_isstdin.c  alder_file_isstdin.h  alder_file_mkdir.c  (+16 more)
alder-fileseq/: README
alder-gc/: README
alder-graph/: README
alder-hash/: README
alder-hashtable/: README
alder-hey/: README
alder-ima2/: README
alder-imaa/: README
alder-interval/: README
alder-kfm/: README
alder-kmer/: README
alder-kmer/alder-kmer/cmake/: AUTHORS  CMakeLists.txt  INSTALL  NEWS  README  THANKS  TODO
alder-kmer/alder-kmer/cmake/lib/: CMakeLists.txt
alder-kmer/alder-kmer/cmake/lib/bit/: CMakeLists.txt
alder-kmer/alder-kmer/cmake/lib/bstrlib/: CMakeLists.txt  bstrlib.patch
alder-kmer/alder-kmer/cmake/lib/dna/: CMakeLists.txt
alder-kmer/alder-kmer/cmake/lib/encode/: CMakeLists.txt
alder-kmer/alder-kmer/cmake/lib/fasta/: CMakeLists.txt
alder-kmer/alder-kmer/cmake/lib/fastq/: CMakeLists.txt
alder-kmer/alder-kmer/cmake/lib/file/: CMakeLists.txt
alder-kmer/alder-kmer/cmake/lib/fileseq/: CMakeLists.txt
alder-kmer/alder-kmer/cmake/lib/hash/: CMakeLists.txt
alder-kmer/alder-kmer/cmake/lib/hashtable/: CMakeLists.txt
alder-kmer/alder-kmer/cmake/lib/kmer/: CMakeLists.txt
alder-kmer/alder-kmer/cmake/lib/kseq/: CMakeLists.txt
alder-kmer/alder-kmer/cmake/lib/logger/: CMakeLists.txt
alder-kmer/alder-kmer/cmake/lib/mcas/: CMakeLists.txt
alder-kmer/alder-kmer/cmake/lib/p99/: CMakeLists.txt
alder-kmer/alder-kmer/cmake/lib/rng/: CMakeLists.txt
alder-kmer/alder-kmer/cmake/lib/seq/: CMakeLists.txt
alder-kmer/alder-kmer/cmake/lib/token/: CMakeLists.txt
alder-kmer/alder-kmer/cmake/lib/vector/: CMakeLists.txt
alder-kmer/alder-kmer/cmake/sh/: src2xcode  xcode2src
alder-kmer/alder-kmer/cmake/src/: CMakeLists.txt
alder-lzma/: README
alder-mem/: README
alder-memory/: README
alder-number/: README
alder-p99/: README
alder-pdf/: README
alder-segtree/: README
alder-seqid/: README
alder-smartall/: README
alder-start/: README
alder-thread/: README
alder-type/: README
alder-vector/alder-vector/vector/: CMakeLists.txt  alder_vector.c  alder_vector.h  alder_vector_interval.c  alder_vector_interval.h  alder_vector_pair.c  alder_vector_pair.h  alder_vector_palign.c  alder_vector_palign.h  gsl_vector_match.h  gsl_vector_seqpair.c
alder-wordtable/: README
alnus-boost/: README
alnus-newick/: README  run.sh
brass-ds/: README
cos-window/: README
deseq/: README.cmdline  README.deseq  README.fastq  README.gff  README.gsl  README.langc  README.libzip  README.mem  README.memory  README.miniz  README.multiuser  README.r  README.ragel  README.readfq  README.samtools  README.sarray  README.star  README.tools  README.xc
gsl/: README  gsl-block.sh
ima2/: README
playground-welcome.playground/: section-1.swift
tipshuffle/: incommand  intree.org  run  treedist-summary.R  treedist.R
(+3072 files in other folders)
