cmake_minimum_required(VERSION 2.8)
project(alder-kmer C)
set (alder-kmer_VERSION_MAJOR "0")
set (alder-kmer_VERSION_MINOR "1")
set (alder-kmer_VERSION_PATCH "1")

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

enable_testing()
INCLUDE_DIRECTORIES(lib)
INCLUDE_DIRECTORIES(lib/bit)
INCLUDE_DIRECTORIES(lib/bstrlib)
INCLUDE_DIRECTORIES(lib/cmacro)
INCLUDE_DIRECTORIES(lib/dna)
INCLUDE_DIRECTORIES(lib/encode)
INCLUDE_DIRECTORIES(lib/fasta)
INCLUDE_DIRECTORIES(lib/fastq)
INCLUDE_DIRECTORIES(lib/file)
INCLUDE_DIRECTORIES(lib/fileseq)
INCLUDE_DIRECTORIES(lib/hash)
INCLUDE_DIRECTORIES(lib/hashtable)
INCLUDE_DIRECTORIES(lib/kmer)
INCLUDE_DIRECTORIES(lib/kseq)
INCLUDE_DIRECTORIES(lib/logger)
INCLUDE_DIRECTORIES(lib/mcas)
INCLUDE_DIRECTORIES(lib/nglogc)
INCLUDE_DIRECTORIES(lib/p99)
INCLUDE_DIRECTORIES(lib/rng)
INCLUDE_DIRECTORIES(lib/seq)
INCLUDE_DIRECTORIES(lib/token)
INCLUDE_DIRECTORIES(lib/vector)

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(src)

