add_subdirectory(bstrlib)
add_subdirectory(cigar)
add_subdirectory(divsufsort)
add_subdirectory(fasta)
add_subdirectory(fastq)
add_subdirectory(file)
# add_subdirectory(gsl)
add_subdirectory(interval)
add_subdirectory(logger)
add_subdirectory(mem)
add_subdirectory(palign)
add_subdirectory(rng)
add_subdirectory(ssa)
add_subdirectory(vector)
