


ADD_SUBDIRECTORY(bit)
ADD_SUBDIRECTORY(bstrlib)
ADD_SUBDIRECTORY(dna)
ADD_SUBDIRECTORY(encode)
ADD_SUBDIRECTORY(fasta)
ADD_SUBDIRECTORY(fastq)
ADD_SUBDIRECTORY(file)
ADD_SUBDIRECTORY(fileseq)
ADD_SUBDIRECTORY(hash)
ADD_SUBDIRECTORY(hashtable)
ADD_SUBDIRECTORY(kmer)
ADD_SUBDIRECTORY(kseq)
ADD_SUBDIRECTORY(logger)
ADD_SUBDIRECTORY(mcas)
ADD_SUBDIRECTORY(nglogc)
ADD_SUBDIRECTORY(p99)
ADD_SUBDIRECTORY(rng)
ADD_SUBDIRECTORY(seq)
ADD_SUBDIRECTORY(token)
ADD_SUBDIRECTORY(vector)
